[gd_scene load_steps=13 format=2]

[ext_resource path="res://Art/Menu/Menu Background.png" type="Texture" id=1]
[ext_resource path="res://Art/Menu/Play HL.png" type="Texture" id=2]
[ext_resource path="res://Art/Menu/Credits HL.png" type="Texture" id=3]
[ext_resource path="res://Art/Menu/Play.png" type="Texture" id=4]
[ext_resource path="res://Art/Menu/Story.png" type="Texture" id=5]
[ext_resource path="res://Art/Menu/Story HL.png" type="Texture" id=6]
[ext_resource path="res://Art/Menu/Credits.png" type="Texture" id=7]
[ext_resource path="res://Art/Menu/Full Screen.png" type="Texture" id=8]
[ext_resource path="res://Art/Menu/Exit HL.png" type="Texture" id=9]
[ext_resource path="res://Art/Menu/Full Screen HL.png" type="Texture" id=10]
[ext_resource path="res://Art/Menu/Exit.png" type="Texture" id=11]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=12]

[node name="menu" type="Node2D"]
script = ExtResource( 12 )

[node name="MenuBackground" type="Sprite" parent="."]
position = Vector2( 256, 256 )
texture = ExtResource( 1 )

[node name="playButton" type="TextureButton" parent="."]
margin_left = 142.0
margin_top = 124.0
margin_right = 368.0
margin_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 113, 24 )
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 4 )
stretch_mode = 3

[node name="storyButton" type="TextureButton" parent="."]
margin_left = 142.0
margin_top = 194.0
margin_right = 368.0
margin_bottom = 242.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 113, 24 )
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 5 )
stretch_mode = 3

[node name="fullscreenButton" type="TextureButton" parent="."]
margin_left = 142.0
margin_top = 268.0
margin_right = 368.0
margin_bottom = 316.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 113, 24 )
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 8 )
stretch_mode = 3

[node name="creditsButton" type="TextureButton" parent="."]
margin_left = 142.0
margin_top = 340.0
margin_right = 368.0
margin_bottom = 388.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 113, 24 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 7 )
stretch_mode = 3

[node name="exitButton" type="TextureButton" parent="."]
margin_left = 142.0
margin_top = 410.0
margin_right = 368.0
margin_bottom = 458.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 113, 24 )
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 11 )
stretch_mode = 3

[connection signal="pressed" from="playButton" to="." method="_on_playButton_pressed"]
[connection signal="pressed" from="storyButton" to="." method="_on_storyButton_pressed"]
[connection signal="pressed" from="fullscreenButton" to="." method="_on_fullscreenButton_pressed"]
[connection signal="pressed" from="creditsButton" to="." method="_on_creditsButton_pressed"]
[connection signal="pressed" from="exitButton" to="." method="_on_exitButton_pressed"]
